--- a/02_college/css/style.css
+++ b/02_college/css/style.css
@@ -1,49 +1,75 @@
 @charset "utf-8";
 
 /*header*/
-#header {background:pink; height:180px; }
-.util_menu_wrap{background: #0044AF;}
-.util_menu{width: 1200px;margin: 0 auto}
-.util_menu .left{float: left;}
-.util_menu .right{float: right;}
+#header { background: #fff;
+					height:180px; }
+.top { background: #0044AF; }
+.wrap  { width: 1200px;
+				 margin: 0 auto; }
 
-.util_menu .left li{float: left;width: 120px;margin-right:5px;}
-.util_menu .left li a{
-	display: block;line-height: 40px;
-	text-align: center;background: #00163B;
-	color:#fff;font-weight:bold;
-}
-.util_menu .left li a.active{background: #fff;color:#333;}
-.util_menu .left li a:hover{background: #fff;color:#333;}
+.topMenu { float: left; }
+.topMenu li { float: left;
+							width: 120px;
+							height: 30px;
+							margin-right: 5px; }
+.topMenu li a { display: block;
+								line-height: 40px;
+								text-align: center;
+								background: #00163B;
+								color: #fff;
+								font-weight: bold; }
+.topMenu li a:hover { background: #fff;
+											color:#333; }
 
-.util_menu .right li{float: left;color:#fff;font-size:0.8em;}
-.util_menu .right li a{
-	display: block;line-height:40px;padding: 0 10px;
-	color:#fff;
-}
-.util_menu .right li.btn_mp a{
-	float: left;background: #fff;color:#333;
-	width:20px;height: 20px;line-height:20px;padding: 0;
-	text-align:center;margin-right:2px;/*margin-top: 10px;*/
-}
-.util_menu .right li:first-child{line-height:40px;padding-right: 10px;}
-.util_menu .right li:nth-child(2){padding-top:10px;}
-.util_menu .right li:last-child a{padding-right:0;}
+.sideMenu { float: right; }
+.sideMenu li { float: left;
+							 color:#fff;
+							 font-size:0.8em; }
+.sideMenu li a{ display: block;
+								line-height:40px;
+								padding: 0 10px;
+								color:#fff;
+								font-size: 9pt; }
+.sideMenu li:first-child { margin-right: 5px;
+													 margin-top: 12px; }
+.sideMenu li:nth-child(2) { margin-top: 10px; }
 
+.logo { float: left;
+				position: relative;
+				top: 35px; }
+.logo .log_txt { float: right; }
 
+.logo h2,
+.logo p { color: #9b9b9b;
+					text-align: center; }
+
+.logo h2:after { content:"";
+								 display: block;
+								 background-color: #9b9b9b;
+								 margin: 0 auto;
+								 margin-left: 0;
+								 margin-top: 0;
+								 width: 170px;
+								 height: 1px; }
+
+.mainMenu { float: right; }
+.mainMenu ul { display: flex; }
+.mainMenu ul li { padding-right: 30px; padding-top:50px; }
+.mainMenu ul li:last-child { padding-right: 0;
+														 padding-top:30px}
+
+.mainMenu ul li a { color: #9b9b9b; }
 
 /*contents*/
-#contents {
-	        height: 1300px;
-	        background-image: url(../images/bg_dot.gif), url(../images/main_bg.jpg);
-	        background-repeat: repeat, no-repeat;
-	        background-position: center;
-	        background-size: auto, cover;
-	        padding-bottom: 100px 0; }
+#contents { height: 1300px;
+	        	background-image: url(../images/bg_dot.gif), url(../images/main_bg.jpg);
+	        	background-repeat: repeat, no-repeat;
+	        	background-position: center;
+	        	background-size: auto, cover;
+	        	padding-bottom: 100px 0; }
 
 #contents .titleWrap { width: 1200px;
                        height: 260px;
-                       background: violet;
                        margin: 0 auto;
                        margin-bottom: 50px; }
 
@@ -53,6 +79,30 @@
 #contents .container>ul>li { float: left;
                              width: 25%;
                              height: 225px; }
+
+#contents	.titleWrap1 { float: left;
+												position: relative;
+												top: 100px; }
+#contents	.titleWrap1 h3,
+#contents	.titleWrap1 h2 { color: #fff; }
+
+#contents	.titleWrap1 h3 { font-size: 30pt;
+													 font-weight: lighter; }
+
+#contents	.titleWrap1 h2 { font-size: 50pt;
+													 font-weight: bold; }
+
+#contents .titleWrap2 { float: right;
+												display: flex;
+												position: relative;
+												top: 125px; }
+
+#contents .titleWrap2>li { display: block;
+													 padding-left: 10px; }
+
+#contents .titleWrap2>li>a { color: #fff;
+														 font-size: 9pt;
+													 	 text-align: center; }
 
 #contents .container>ul>li:nth-child(2n)
 { background:pink; }
