--- a/04_company/css/style.css
+++ b/04_company/css/style.css
@@ -76,3 +76,33 @@
 .content .contList>li:nth-child(9) {}
 .content .contList>li:nth-child(10) {position: absolute; left: 310px; bottom: 0;}
 .content .contList>li:nth-child(11) {position: absolute;width: 50%; right: 0; bottom: 0;}
+
+
+
+
+/* container */
+.container{
+  height: 750px; background: #aaa url(../images/contentsbg01.jpg) no-repeat center fixed;
+  background-size: cover; color: #fff; padding: 70px 0;
+}
+.container .section{width: 1240px; margin: 0 auto;}
+.container .section>h4 {text-align: center;}
+.container .section>h4:after {
+  content:""; display: block; width: 50px; height: 2px; background: #fff;
+  margin: 20px auto;
+}
+.container .section>p {text-align: center; font-size: 2rem; margin-bottom: 30px;}
+.container .section li {
+  float: left; width: calc( ( 100% - 60px) / 4); background: orange;
+  height: 380px; padding-top: 70px; border-radius: 10px; transition: 0.3s;
+  cursor:pointer;
+}
+.container .section li + li {margin-left: 20px;}
+.container .section li:hover {
+  border-shadow: 8px 8px 10px; rgba(0,0,0,0.5);
+  transform: translate(-10px,-10px);
+}
+
+.container .section li img {display: block; margin: 0 auto;}
+.container .section .card_body {text-align: center; padding: 20px 40px;}
+.container .section .card_body h3 {margin-bottom: 10px;}
