--- a/04_company/css/style_jentle_monster.css
+++ b/04_company/css/style_jentle_monster.css
@@ -59,52 +59,65 @@
 
 /* content */
 .content .contList {
-  width: 1240px; height: 930px; margin: 0 auto; display: flex;
-  flex-wrap: wrap; position: relative;
+  width: 1240px;
+  height: 930px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
 }
-.content .contList>li {width: 25%; height: 310px;}
+.content .contList>li {
+  width: 25%;
+  height: 310px;
+  transition: 0.3s;
+  cursor: pointer;
+  position: relative;
+}
 .content .contList>li:nth-child(2n+1) {background: skyblue;}
 .content .contList>li:nth-child(3n+1) {background: pink;}
 
-.content .contList>li:nth-child(1) {
-  background-image: url(../images_jentle_monster/01.png);
-}
-.content .contList>li:nth-child(2) {
-  background-image: url(../images_jentle_monster/02.png);
-}
-.content .contList>li:nth-child(3) {
-  width: 50%;
-  background-image: url(../images_jentle_monster/03.png);
-}
+.content .contList>li:nth-child(1) {}
+.content .contList>li:nth-child(2) {}
+.content .contList>li:nth-child(3) {width: 50%;}
 .content .contList>li:nth-child(4) {
   width: 25%;
   height: 620px;
-  background-image: url(../images_jentle_monster/04.png);
 }
-.content .contList>li:nth-child(5) {
-  width: 50%;
-  background-image: url(../images_jentle_monster/05.png);
-}
-.content .contList>li:nth-child(6) {
-  width: 25%;
-  background-image: url(../images_jentle_monster/06.png);
-}
+.content .contList>li:nth-child(5) {width: 50%;}
+.content .contList>li:nth-child(6) {width: 25%;}
 .content .contList>li:nth-child(7) {
   position: absolute;
   bottom: 0;
   left: 310px;
   width: 25%;
-  background-image: url(../images_jentle_monster/07.png);
 }
 .content .contList>li:nth-child(8) {
   position: absolute;
   bottom: 0;
   left: 620px;
   width: 50%;
-  background-image: url(../images_jentle_monster/08.png);
 }
 
+.content .contList>li:hover {
+  transform: translate(-10px,-10px);
+}
 
+.content .contList>li .textbox {
+  width: 100%;
+  height: 50px;
+  background: #111;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom:0;
+  opacity: 0;
+}
+
+.content .contList>li:hover .textbox {opacity: 1;}
+
+.content .contList>li:nth-child(2) .textbox,
+.content .contList>li:nth-child(5) .textbox,
+.content .contList>li:nth-child(7) .textbox {line-height: 50px;}
 
 
 /* container */
@@ -112,26 +125,76 @@
   height: 1090px; background: #000 url(../images_jentle_monster/main02_bg.png)
   no-repeat center fixed;
   background-size: cover;
-  color: #fff; padding: 70px 0;
+  padding: 236px 0;
 }
-.container .section{width: 1240px; margin: 0 auto;}
-.container .section>h4 {text-align: center;}
-.container .section>h4:after {
-  content:""; display: block; width: 50px; height: 2px; background: #fff;
-  margin: 20px auto;
+.contList2{
+  width: 1240px; height: 620px; margin: 0 auto;
+  display: flex; flex-wrap: wrap; position: relative;
 }
-.container .section>p {text-align: center; font-size: 2rem; margin-bottom: 30px;}
-.container .section li {
-  float: left; width: calc( ( 100% - 60px) / 4); background: orange;
-  height: 380px; padding-top: 70px; border-radius: 10px; transition: 0.3s;
-  cursor:pointer;
+.section .contList2 li {
+  width: 25%;
+  height: 310px;
+  transition: 0.3s;
+  cursor: pointer;
 }
-.container .section li + li {margin-left: 20px;}
-.container .section li:hover {
-  border-shadow: 8px 8px 10px; rgba(0,0,0,0.5);
+.section .contList2 li:nth-child(2n+1) {background: skyblue;}
+.section .contList2 li:nth-child(3n+1) {background: pink;}
+
+.section .contList2 li:nth-child(1) {height: 620px;}
+.section .contList2 li:nth-child(2) {}
+.section .contList2 li:nth-child(3) {width: 50%;}
+.section .contList2 li:nth-child(4) {width: 50%; position: absolute; top: 310px; left: 310px;}
+.section .contList2 li:nth-child(5) {position: absolute; top:310px; right: 0;}
+
+.section .contList2 li:hover {
   transform: translate(-10px,-10px);
 }
 
-.container .section li img {display: block; margin: 0 auto;}
-.container .section .card_body {text-align: center; padding: 20px 40px;}
-.container .section .card_body h3 {margin-bottom: 10px;}
+
+
+/* footer */
+footer{
+  display: flex;
+  width: 100%;
+  float: left;
+  position: relative;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.footer1,
+.footer2,
+.footer3,
+.footer4 {
+  float: left;
+  width: 25%;
+}
+
+.footer4,
+.footer6{padding-right: 0;}
+
+.footer1 h4,
+.footer2 h4,
+.footer3 h4,
+.footer4 h4{font-size: 14pt;}
+
+.footer1 p,
+.footer2 p,
+.footer3 p,
+.footer4 p{font-size: 8pt;}
+
+.footer3 p{column-span: all;}
+
+.footer5,
+.footer6{
+  clear: both;
+  width: 100%;
+  position: absolute;
+  bottom: -100px;
+}
+
+.footer6{
+  width: 50%;
+  position: absolute;
+  left: 50%;
+}
