--- a/04_company/css/responsive_jentle_monster.css
+++ b/04_company/css/responsive_jentle_monster.css
@@ -1,17 +1,80 @@
 @charset "UTF-8";
 
 @media screen and (max-width:700px){
-  .content .contList {width: 100%;}
-  .content .contList>li {width: 50%; height: 310px !important; order: 11}
-  .content .contList>li:nth-child(1) {}
-  .content .contList>li:nth-child(2) {}
-  .content .contList>li:nth-child(3) {}
-  .content .contList>li:nth-child(4) {}
-  .content .contList>li:nth-child(5) {}
-  .content .contList>li:nth-child(6) {}
-  .content .contList>li:nth-child(7) {}
-  .content .contList>li:nth-child(8) {}
-  .content .contList>li:nth-child(9) {}
-  .content .contList>li:nth-child(10) {position: static;}
-  .content .contList>li:nth-child(11) {position: static;}
+  #headerTop{
+    transform: initial;
+    left: 0;
+
+  }
+  #headerTop h1.logo {
+    float: left;
+    width: 100px;
+    line-height: 105px;
+    margin: 0 auto;
+    padding-left: 105px;
+  }
+
+  #main_menu {
+    float: initial;
+    padding-right: 0;
+    display: block;
+    background: #000;
+    position: fixed;
+    width: 100%;
+    height: 80%;
+    top:0;
+  }
+
+  #main_menu li:nth-child(1) {
+    position: absolute;
+    top: 105px;
+    left: 180px;
+  }
+  #main_menu li:nth-child(2) {
+    position: absolute;
+    top: 205px;
+    left: 195px;
+  }
+  #main_menu li:nth-child(3) {
+    position: absolute;
+    top: 305px;
+    left: 160px;
+  }
+  #main_menu li:nth-child(4) {
+    position: absolute;
+    top: 405px;
+    left: 170px;
+  }
+  #main_menu li:nth-child(5) {
+    position: absolute;
+    top: 505px;
+    left: 180px;
+  }
+  #main_menu li:nth-child(6) {
+    position: absolute;
+    top: 605px;
+    left: 170px;
+  }
+
+  #headerTop .toggleMenu{
+    position: absolute;
+    top: 55px;
+    left: 30px;
+    display: block;
+    cursor: pointer;
+  }
+
+  .content .contList {width: 350px;}
+  .content .contList>li {width: 350px; height: 350px;}
+  .content .contList>li:nth-child(1) {order: 1}
+  .content .contList>li:nth-child(2) {order: 2}
+  .content .contList>li:nth-child(3) {order: 3}
+  .content .contList>li:nth-child(4) {order: 4}
+  .content .contList>li:nth-child(5) {order: 5}
+  .content .contList>li:nth-child(6) {order: 6}
+  .content .contList>li:nth-child(7) {order: 7}
+  .content .contList>li:nth-child(8) {order: 8}
+  .content .contList>li:nth-child(9) {order: 9}
+  .content .contList>li:nth-child(10) {order: 10}
+  .content .contList>li:nth-child(11) {order: 11}
 }
