--- a/04_company/css/responsive_jentle_monster.css
+++ b/04_company/css/responsive_jentle_monster.css
@@ -14,55 +14,11 @@
     padding-left: 105px;
   }
 
-  #main_menu {
-    float: initial;
-    padding-right: 0;
-    display: block;
-    background: #000;
-    position: fixed;
-    width: 100%;
-    height: 80%;
-    top:0;
-  }
+  #main_menu {width: 100%; height: 100%; background: #000;}
+  #main_menu ul {display: flex; flex-direction: column; justify-content: center; }
+  #main_menu li {float: inherit;}
 
-  #main_menu li:nth-child(1) {
-    position: absolute;
-    top: 105px;
-    left: 180px;
-  }
-  #main_menu li:nth-child(2) {
-    position: absolute;
-    top: 205px;
-    left: 195px;
-  }
-  #main_menu li:nth-child(3) {
-    position: absolute;
-    top: 305px;
-    left: 160px;
-  }
-  #main_menu li:nth-child(4) {
-    position: absolute;
-    top: 405px;
-    left: 170px;
-  }
-  #main_menu li:nth-child(5) {
-    position: absolute;
-    top: 505px;
-    left: 180px;
-  }
-  #main_menu li:nth-child(6) {
-    position: absolute;
-    top: 605px;
-    left: 170px;
-  }
-
-  #headerTop .toggleMenu{
-    position: absolute;
-    top: 55px;
-    left: 30px;
-    display: block;
-    cursor: pointer;
-  }
+  
 
   .content .contList {width: 350px;}
   .content .contList>li {width: 350px; height: 350px;}
