--- a/04_company/css/style_jentle_monster.css
+++ b/04_company/css/style_jentle_monster.css
@@ -5,7 +5,7 @@
 #headerTop {
   width: 100%;
   position: fixed;
-  z-index: 9999;
+  z-index: 3000;
   left: 50%;
   transform: translateX(-50%);
   top: 0px;
@@ -31,9 +31,12 @@
 #main_menu li a:hover {color: #000;}
 
 #headerTop .toggleMenu {
-  width: 50px; height: 50px; float: right;
+  width: 50px; height: 50px;
   position: relative; display: flex;
-  justify-content: center; align-items: center; display: none; }
+  left: 35px; top: 53px;
+  justify-content: center; align-items: center; display: none;
+  cursor: pointer;
+}
 
 #headerTop .toggleMenu div {
   width: 30px; height: 3px; background: #fff; border-radius:2px;
@@ -42,7 +45,6 @@
 #headerTop .toggleMenu .bar1 {transform: translateY(10px);}
 #headerTop .toggleMenu .bar2 {}
 #headerTop .toggleMenu .bar3 {transform: translateY(-10px);}
-
 
 
 
@@ -76,6 +78,7 @@
   display: flex;
   flex-wrap: wrap;
   position: relative;
+
 }
 .content .contList>li {
   width: 25%;
