--- a/04_company/css/responsive_jentle_monster.css
+++ b/04_company/css/responsive_jentle_monster.css
@@ -30,14 +30,20 @@
       50% {transform: scale(0);}
     }
 
+  .pc{display: none;}
+  .mobile{
+    display: flex;
+    flex-direction: column;
+  }
 
   .content .contList {
     max-width: 310px;
     height: 100%;
+    display: flex;
     flex-wrap: none;
-    position: none;
+    position: inherit;
     justify-content: center;
-    .align-items: center;
+    align-items: center;
     flex-direction: column;
   }
   .content .contList>li{width: 100%;}
@@ -47,14 +53,14 @@
   .content .contList>li:nth-child(3) {
     width: 310px; height: 310px;
     display: flex;
-    .justify-content: center;
+    justify-content: center;
     align-items: center;
   }
   .content .contList>li:nth-child(4) {
     width: 310px; height: 310px;
     display: flex;
     justify-content: center;
-    .align-items: center;
+    align-items: center;
   }
   .content .contList>li:nth-child(5) {
     width: 310px; height: 310px;
@@ -67,25 +73,60 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
   .content .contList>li:nth-child(7) {
     width: 310px; height: 310px;
     display: flex;
-    position: none;
+    position: inherit;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
   .content .contList>li:nth-child(8) {
     width: 310px; height: 310px;
     display: flex;
-    position: none;
+    position: inherit;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
   }
-  .content .contList>li:nth-child(9) {}
 
   .content .contList>li .textbox{
     width: 100%;
     height: 50px;
   }
+
+  .section .contList2 {
+      max-width: 310px;
+      height: 100%;
+      display: flex;
+      flex-wrap: none;
+      position: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+  }
+
+  .section .contList2>li:nth-child(1) {}
+  .section .contList2>li:nth-child(2) {}
+  .section .contList2>li:nth-child(3) {}
+  .section .contList2>li:nth-child(4) {
+    width: 310px; height: 310px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: inherit;
+    flex-direction: column;
+  }
+  .section .contList2>li:nth-child(5) {
+    width: 310px; height: 310px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: inherit;
+    flex-direction: column;
+  }
+
+
 } /* @media screen */
