--- a/04_company/css/style_jentle_monster.css
+++ b/04_company/css/style_jentle_monster.css
@@ -153,7 +153,7 @@
   cursor: pointer;
 }
 .section .contList2 li:nth-child(2n+1) {background: skyblue;}
-.section .contList2 li:nth-child(3n+1) {background: pink;}
+.section .contList2 li:nth-child(3n+1) {background: none;}
 
 .section .contList2 li:nth-child(1) {height: 620px;}
 .section .contList2 li:nth-child(2) {}
