--- a/04_company/css/responsive_jentle_monster.css
+++ b/04_company/css/responsive_jentle_monster.css
@@ -118,12 +118,24 @@
     align-items: center;
     flex-direction: column;
   }
-  .section .contList2>li:nth-child(2) {display: none;}
-  .section .contList2>li:nth-child(3) {display: none;}
-  .section .contList2>li:nth-child(4) {display: none;}
+  .section .contList2>li:nth-child(2),
+  .section .contList2>li:nth-child(3),
+  .section .contList2>li:nth-child(4),
   .section .contList2>li:nth-child(5) {display: none;}
 
-  
+  footer{
+    max-width: 700px;
+    height: 100%;
+    display: flex;
+    flex-wrap: none;
+    position: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+
+
 
 
 } /* @media screen */
